--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 
 # RStudio files
 .Rproj.user/
+.Rproj.user
+*.Rproj
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
@@ -38,4 +40,3 @@
 # vim security files
 *~
 
-.Rproj.user
